--- a/public/style.css
+++ b/public/style.css
@@ -6,47 +6,96 @@
   padding: 0;
 }
 
+:root {
+  --clr-primary-1: #f27b52;
+  --clr-light-1: #f6a78d;
+  --clr-dark-1: #ed511d;
+  --clr-primary-2: #ed5629;
+  --clr-light-2: #f28969;
+  --clr-dark-2: #ce3e12;
+  --clr-primary-3: #294023;
+  --clr-light-3: #43693a;
+  --clr-dark-3: #1a2815;
+  --clr-primary-4: #f9efdb;
+  --clr-light-4: #fcf7ee;
+  --clr-dark-4: #f3e0b9;
+  --clr-primary-5: #2c2c2c;
+  --clr-light-5: #525252;
+  --clr-dark-5: #141414;
+}
+
+@font-face {
+  font-family: reins;
+  src: url(/assets/point-guard.otf);
+}
+
+@font-face {
+  font-family: heebo;
+  src: url(/assets/Heebo-Regular-BF64375253d0b7c.ttf);
+}
+
 body {
+  color: var(--clr-light-4);
+  background: var(--clr-primary-5);
   min-height: 100vh;
-  display: grid;
-  place-items: center;
-  font-family: Helvetica, Arial, sans-serif;
-  background: silver;
+  overflow-x: hidden;
 }
-
-header {
-  padding: 0.5rem;
-  background: red;
-  color: white;
-
-  h1 {
-    text-transform: uppercase;
-  }
-}
-
-article {
+main {
   display: flex;
-  flex-flow: column;
-  justify-content: space-between;
-  width: 12rem;
-  aspect-ratio: 1/1;
-  border-radius: 0.5rem;
-  overflow: hidden;
-  background: white;
-  text-align: center;
-  transform-origin: center;
-  transform: rotate(2deg);
-  box-shadow: rgba(0, 0, 0, 0.16) 0px 3px 6px, rgba(0, 0, 0, 0.23) 0px 3px 6px;
-  > p {
-    font-size: 2rem;
-    font-family: 'Permanent Marker', cursive;
-    transform-origin: center;
-    transform: rotate(-6deg);
-    word-break: break-all;
-  }
+  flex-direction: column;
+  gap: 3em;
+  margin: 3em;
 }
 
-footer {
-  height: 1rem;
-  background: red;
+@media (min-width:960px) { 
+main {
+  display: flex;
+  flex-direction: row;
+  gap: 3em;
+  margin: 3em;
+}
+}
+
+.card-front, .card-back{
+  background-color: var(--clr-primary-1);
+  border: solid 5px var(--clr-primary-1);
+  height: 35em;
+  position: relative;
+  width: 25em;
+}
+
+img {
+  border: solid 4px var(--clr-light-4);
+  height: 25em;
+  margin: 0.3em;
+  object-fit: cover;
+  clip-path: polygon(0 0, 100% 0, 100% 85%, 0 100%);
+  width: 23.8em;
+}
+
+.more-info {
+  border: solid 4px var(--clr-light-4);
+  height: 25em;
+  margin: 0.3em 0.3em 0em 0.3em;
+  width: 23.8em;
+}
+
+h1, h2 {
+  color: var(--clr-primary-1);
+  font-family: "reins";
+  font-size: 6em;
+  margin: 0em 0.5em 0em 0.5em;
+  text-transform: uppercase;
+}
+
+.big-text{ 
+background-color: var(--clr-primary-3);
+border-bottom: 0.1em solid var(--clr-primary-3);
+border-right: 10em solid transparent;
+}
+
+p {
+  color: var(--clr-primary-5);
+  font-size: 1.59em;
+  position: absolute; right: 0.3em;
 }
