--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,10 +1,13 @@
 <%- include('./partials/head') %>
 
+<video autoplay loop muted playsinline>
+  <source src="../assets/istockphoto-1404635524-640_adpp_is.mp4" type="video/mp4">
+</video>
 
 <main>
   <div class="card-front"> 
     <div class="big-text">
-      <img src="../images/Hadil.jpg" alt="Hadil">
+      <img src="../images/Untitled design (1).png" alt="Hadil">
       <h1><%= data.name %></h1>
     </div>
     
