--- a/public/style.css
+++ b/public/style.css
@@ -95,6 +95,7 @@ main {
   backface-visibility: hidden;
   background-color: var(--clr-primary-2);
   border: solid 5px var(--clr-primary-2);
+  border-radius: 2%;
   height: 35em;
   position: relative;
   width: 25em;
