--- a/public/style.css
+++ b/public/style.css
@@ -102,7 +102,6 @@ main {
   width: 25em;
 }
 
-
 .card-back {
   transform: rotateY(180deg);
   position: absolute; top: 0em;
@@ -142,13 +141,21 @@ img {
 
 h1, h2 {
   color: var(--clr-primary-2);
-  background-color: var(--clr-dark-5);
   font-family: "reins";
   font-size: 6em;
   margin: 0em 0.5em 0em 0.05em;
-  padding-left: 0.9em;
+  padding-left: 0.2em;
   text-transform: uppercase;
   width: 3.98em;
+  letter-spacing: 30px;
+}
+
+h1 {
+  transform: skewY(-5deg);
+}
+
+h2 {
+  transform: skewY(5deg);
 }
 
 .big-text{ 
