--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,10 +1,5 @@
 <%- include('./partials/head') %>
 
-<video autoplay loop muted playsinline>
-  <source src="/assets/Profile card achtergrond ‐ Gemaakt met Clipchamp.mp4" type="video/mp4">
-
-</video>
-
 <main>
   <div class="card">
     <div class="card-inner">
@@ -19,32 +14,13 @@
       <div class="card-back">
         <div class="big-text">
           <div class="more-info">
-            <P>  Hoi, mijn naam is Hadil en ik ben 23 jaar oud. Ik woon in Leiden en mijn hobbies zijn lezen, voetbal kijken en koken. Momenteel studeer ik front-end design & development aan de HVA.</P>
+            <P>  Hoi, mijn naam is Hadil. Ik ben 24 jaar oud en woon in Leiden. <%= data.bio %></P>
           </div>
-          <h2><%= data.bio %></h2>
+          <h2></h2>
         </div>
       </div>
   </div>
   </div>
 </main>
-
-<footer>
-<a href="https://github.com/Hadil24A"><svg fill="#000000" width="34px" height="34px" viewBox="0 0 30 30" xmlns="http://www.w3.org/2000/svg"><path d="M0 15c0 7.033 4.836 12.945 11.375 14.563.3.077.635-.19.625-.5V22.5c0-.333.197-.652.563-.844.37-.185.28-.856-.125-.937-1.9-.38-3.52-1.143-4.657-2.157C6.646 17.547 6 16.314 6 15c0-.915.327-1.793.906-2.594.06-.082.092-.18.094-.28V7.343l3.97 2.125c.122.066.273.077.405.03C12.488 9.168 13.698 9 15 9s2.512.168 3.625.5c.132.047.283.035.406-.03L23 7.343v4.78c.002.1.035.2.094.282.58.8.906 1.68.906 2.594 0 1.315-.645 2.548-1.78 3.563-1.138 1.014-2.76 1.776-4.657 2.156-.406.08-.495.75-.125.936.365.192.562.51.562.844v6.563c-.01.31.326.577.625.5C25.165 27.945 30 22.032 30 15c0-8.278-6.722-15-15-15C6.722 0 0 6.722 0 15zM15 1c7.738 0 14 6.262 14 14 0 6.33-4.24 11.547-10 13.28V22.5c0-.4-.154-.756-.375-1.063 1.663-.457 3.182-1.175 4.28-2.156C24.206 18.124 25 16.64 25 15c0-1.083-.394-2.074-1-2.97V6.5c.003-.35-.446-.613-.75-.437L18.656 8.53C17.516 8.22 16.296 8 15 8c-1.295 0-2.517.218-3.656.53L6.75 6.064c-.304-.176-.753.087-.75.437v5.53c-.606.896-1 1.887-1 2.97 0 1.64.795 3.123 2.094 4.28 1.1.982 2.62 1.7 4.28 2.158-.22.306-.374.66-.374 1.062v1.688c-1.09.406-1.807.493-2.25.406-.478-.094-.736-.34-1.03-.75-.592-.823-1.173-2.34-3.095-2.836-.654-.175-.875.8-.25.97 1.508.39 1.805 1.448 2.53 2.46.364.505.886.973 1.658 1.125.643.126 1.422.03 2.437-.313v3.03C5.242 26.548 1 21.33 1 15 1 7.262 7.262 1 15 1z"/></svg></a>
-<!-- <a href="https://twitter.com/its_hdl"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="black" role="presentation" viewBox="0 0 48 48" class="inline mr-1 -mt-1"><path d="M 28.570312 20.34375 L 46.441406 0 L 42.210938 0 L 26.683594 17.660156 L 14.292969 0 L 0 0 L 18.742188 26.707031 L 0 48.039062 L 4.234375 48.039062 L 20.617188 29.386719 L 33.707031 48.039062 L 48 48.039062 M 5.761719 3.125 L 12.265625 3.125 L 42.207031 45.066406 L 35.699219 45.066406 "></path></svg></a> -->
-<a href="https://www.linkedin.com/in/hadil-ahmed-91b0252a3/"><svg fill="#000000" height="34px" width="34px" version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" 
-  viewBox="0 0 310 310" xml:space="preserve">
-<g id="XMLID_801_">
- <path id="XMLID_802_" d="M72.16,99.73H9.927c-2.762,0-5,2.239-5,5v199.928c0,2.762,2.238,5,5,5H72.16c2.762,0,5-2.238,5-5V104.73
-   C77.16,101.969,74.922,99.73,72.16,99.73z"/>
- <path id="XMLID_803_" d="M41.066,0.341C18.422,0.341,0,18.743,0,41.362C0,63.991,18.422,82.4,41.066,82.4
-   c22.626,0,41.033-18.41,41.033-41.038C82.1,18.743,63.692,0.341,41.066,0.341z"/>
- <path id="XMLID_804_" d="M230.454,94.761c-24.995,0-43.472,10.745-54.679,22.954V104.73c0-2.761-2.238-5-5-5h-59.599
-   c-2.762,0-5,2.239-5,5v199.928c0,2.762,2.238,5,5,5h62.097c2.762,0,5-2.238,5-5v-98.918c0-33.333,9.054-46.319,32.29-46.319
-   c25.306,0,27.317,20.818,27.317,48.034v97.204c0,2.762,2.238,5,5,5H305c2.762,0,5-2.238,5-5V194.995
-   C310,145.43,300.549,94.761,230.454,94.761z"/>
-</g>
-</svg></a>
-</footer>
-
 
 <%- include('./partials/foot') %>
